<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FTP Client</string>
    <string name="action_settings">Settings</string>
    <string name="ftp_server_address">FTP server address</string>
    <string name="password">Password</string>
    <string name="port">Port</string>
    <string name="binary">Binary</string>
    <string name="ascii">Ascii</string>
    <string name="connect">Connect</string>
    <string name="transfer_mode">Transfer mode</string>
    <string name="username">Username</string>
    <string name="title_activity_file_list">FileList</string>
    <string name="hello_world">Hello world!</string>
    <string name="add_file">Add file</string>
    <string name="add_dir">Add directory</string>
    <string name="filename">filename</string>
    <string name="directory_name">directory\'s name</string>
    <string name="deconnect">Deconnect</string>

</resources>
